Fix screen overflow issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -136,7 +136,7 @@ h1{
     flex-wrap: wrap;
     justify-content: space-between;
 
-    ul {
+    > ul {
         width: 250px;
     }
 }
